product quantity separated in checkout

--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -4,7 +4,7 @@
 
     <section class="mt-14 text-center">
         <h1 class="michroma-regular text-2xl">YOUR CART</h1>
-        <p class="mt-5 border-t border-gray-400 font-thin text-sm ">2 products </p>
+        <p class="mt-5 border-t border-gray-400 font-thin text-sm "><%= items.total %> products </p>
     </section>
 
     <div class="mt-6 space-y-6">
