order history separated in user side

--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -2,9 +2,21 @@
 
 <main>
 
+<section class="justify-start">
 
+    
+<form class="mx-end w-36 h-8">
+    <select id="orderSort" class="border border-gray-300 text-blue-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-100 dark:border-gray-600 dark:placeholder-gray-100 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+ 
+      <option value="recentlyAdded">Recently added</option>
+      <option value="delivered">Deliverd</option>
+      <option value="cancelled">Cancelled</option>
+    </select>
+  </form>
+  
+</section>
 
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+  <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-5">
     <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
         <div>
             </button>
